# paperclip

./: .coderabbit.yaml  .doc-review-cursor  .dockerignore  .env  .env.agents.example  .env.doppler  .env.example  .env.example.bak  .env.example.updated  .env.koenig.example  .env.local  .env.prod  .env.prod.example  .env.production.example  .env.sandbox.example  .eslintrc.js  .fork-sync-status.md  .gcloudignore  .gitattributes  .gitignore  .gitignore.koenig  .gitleaks.toml  .gitleaksignore  .gitmodules  .i18n_progress.json  .impact_gate_muted_state.json  .jcodemunch.jsonc  .mailmap  .markdownlintignore  .mcp.json  .npmrc  .opencode.jsonc  .pr_description  .pre-commit-config.yaml  .prettierignore  .quicklaunch.sh  .quickstop.sh  .resubmit.json  .rgignore  .vercelignore  (+631 more)
.agent-hooks/: settings.json  skill_metrics.py
.changeset/: README.md  add-ntfy-notifier-plugin.md  silver-cooks-argue.md
.ck-agent/: CONTINUITY.md  MEMORY.md  approval-deliverable.mjs  approval-deliverable.test.mjs  ck-b2b-mail-sync.py  cron-ck-cadence.sh  daily-distance-outreach-routine.md  deepseek-costing.mjs  deepseek-costing.test.mjs  espo-fetch-b2b.sh  eval-sync.mjs  gen_org_map.py  pc-api.sh  pc-server-up.sh  provision-org.py  run-meeting.py  runner-guardrails.mjs  runner-selection.mjs  (+4 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
harness/: pyproject.toml  v0.py
harness/paperclip_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
harness/tests/: test_v0.py
(+15615 files in other folders)
