[package]
name = "paperclip-desktop"
version = "0.1.0"
description = "Paperclip Desktop Launcher"
edition = "2021"

[lib]
name = "paperclip_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
url = "2"
open = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
